Blender closes if you put the checkbox unselected in Merge by Distance #69404

Closed
opened 2019-09-02 12:35:52 +02:00 by redz · 9 comments

Blender closes if you put the checkbox unselected in Merge by Distance

{F7714074}System Information
Operating system: Linux-5.0.0-25-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-08-29 08:44, hash: 6b33bd1067
Worked: (optional)

Blender closes if you put the checkbox unselected in Merge by Distance {[F7714074](https://archive.blender.org/developer/F7714074/2019-09-02_13-32.jpg)}**System Information** Operating system: Linux-5.0.0-25-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-08-29 08:44, hash: `6b33bd1067` Worked: (optional)
Author

Added subscriber: @Axelaredz

Added subscriber: @Axelaredz

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

I can confirm. Clicking on the "unselected" box immediately crashes Blender.

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-09-01 20:47, hash: 928e0258fe

I can confirm. Clicking on the "unselected" box immediately crashes Blender. **System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-09-01 20:47, hash: `928e0258fe`
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, was working in 2.80, checking... (seems BMO_opcode_from_opname_check has problems with automerge -- returns -1? ...)

Can confirm, was working in 2.80, checking... (seems `BMO_opcode_from_opname_check` has problems with `automerge` -- returns -1? ...)
Campbell Barton was assigned by Philipp Oeser 2019-09-02 14:57:30 +02:00
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

automerge bmop was removed in ed066f231d, @ideasman42: mind checking?

automerge bmop was removed in ed066f231d, @ideasman42: mind checking?

This issue was referenced by a3559a70dd

This issue was referenced by a3559a70dd57110fd4e1cc568928ee1e3504959a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69404
No description provided.