Fix T69404: Merge by distance crash with Unselected

Error introduced when removing the automerge bmesh operator.