source/blender/editors/transform/transform_conversions.c
@@ -7128,10 +7128,11 @@ static void special_aftertrans_update__mesh(bContext *UNUSED(C), TransInfo *t)
 
       if (t->scene->toolsettings->automerge & AUTO_MERGE) {
         if (t->scene->toolsettings->automerge & AUTO_MERGE_AND_SPLIT) {
-          EDBM_automerge_and_split(t->scene, tc->obedit, true, true, true, hflag);
+          EDBM_automerge_and_split(
+              tc->obedit, true, true, true, hflag, t->scene->toolsettings->doublimit);
         }
         else {
-          EDBM_automerge(t->scene, tc->obedit, true, hflag);
+          EDBM_automerge(tc->obedit, true, hflag, t->scene->toolsettings->doublimit);
         }
       }
 
